--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -31,6 +31,7 @@
     <!-- Ambient Display -->
     <string name="ambient_display_title">Ambient display</string>
     <string name="ambient_display_enable_title">Ambient display</string>
+    <string name="ambient_enable">Use ambient display</string>
     <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
     <string name="ambient_display_gestures_title">Ambient display gestures</string>
     <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
